--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         <li> <a href="./2/index.html">Урок 2</a></li>
         <li> <a href="./3/index.html">Урок 3</a></li>
         <li> <a href="./4/index.html">Урок 4</a></li>
+        <li> <a href="./5/index.html">Урок 5</a></li>
+        <li> <a href="./6/index.html">Урок 6</a></li>
+        <li> <a href="./7/index.html">Урок 7</a></li>
+        <li> <a href="./8/index.html">Урок 8</a></li>
+        <li> <a href="./9/index.html">Урок 9</a></li>
+        <li> <a href="./10/index.html">Урок 10</a></li>
+        <li> <a href="./11/index.html">Урок 11</a></li>
+        <li> <a href="./12/index.html">Урок 12</a></li>
+        
     </ul>
 </body>
 </html>
