--- a/index.html
+++ b/index.html
@@ -5,23 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Мои работы</h1>
+   
+    <h1>My works</h1>
+    <p>Hre is the website with examples of my works</p>
+    <br></br>
+    <p>Sprint 1.The beggining</p>
+    <hr>
+
+
+    <div class="header">
+        <div class="header-item"><a href="./1/index.html">Lesson 1</a></div>
+        <div class="header-item"><a href="./2/index.html">Lesson 2</a></div>
+        <div class="header-item"><a href="./3/index.html">Lesson 3</a></div>
+        <div class="header-item"><a href="./4/index.html">Lesson 4</a></div>
+        <div class="header-item"><a href="./5/index.html">Lesson 5</a></div>
+
+    </div>
+    <p>Sprint 2.Marcup master</p>
+    <hr>
+    <div class="center">
+        <div class="center-item"><a href="./6/index.html">Box model lesson 6</a></div>
+        <div class="center-item"><a href="./7/index.html"> Lesson 7</a></div>
+        <div class="center-item"> <a href="./8/index.html"> Lesson 8</a></div>
+        <div class="center-item"> <a href="./9/index.html">Lesson 9</a></div>
+        <div class="center-item"> <a href="./10/index.html">Lesson 10</a></div>
+        <div class="center-item"> <a href="./11/index.html">Lesson 11</a></div>
+        <div class="center-item"><a href="./12/index.html">Lesson 12</a></div>
+        <div class="center-item"><a href="./13/index.html">Lesson 13</a></div>
+        <div class="center-item"><a href="./14/index.html">Lesson 14</a></div>
+        <div class="center-item"><a href=". /15/index.html">Lesson 15</a></div>
+        <div class="center-item"><a href="./16/index.html">Lesson 16</a></div>
+        <div class="center-item"><a href="./17/index.html">Lesson 17</a></div>
+        <div class="center-item"><a href="./18/index.html">Lesson 18</a></div>
+        <div class="center-item"><a href="./19/index.html">Lesson 19</a></div>
+        <div class="center-item"><a href="./20/index.html">Lesson 20</a></div>
+
+
+    </div>
+    <hr>
+    <div class="footer">
+
+    </div>
     <ul>
-        <li> <a href="./1/index.html">Урок 1</a></li>
-        <li> <a href="./2/index.html">Урок 2</a></li>
-        <li> <a href="./3/index.html">Урок 3</a></li>
-        <li> <a href="./4/index.html">Урок 4</a></li>
-        <li> <a href="./5/index.html">Урок 5</a></li>
-        <li> <a href="./6/index.html">Урок 6</a></li>
-        <li> <a href="./7/index.html">Урок 7</a></li>
-        <li> <a href="./8/index.html">Урок 8</a></li>
-        <li> <a href="./9/index.html">Урок 9</a></li>
-        <li> <a href="./10/index.html">Урок 10</a></li>
-        <li> <a href="./11/index.html">Урок 11</a></li>
-        <li> <a href="./12/index.html">Урок 12</a></li>
         
-    </ul>
 </body>
 </html>
