--- a/17/index.html
+++ b/17/index.html
@@ -12,7 +12,7 @@
 <body>
    
    <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-md  navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Poleznay eda.UA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
       </nav>
       <div class="card-group">
         <div class="card">
-          <img src="./img/avocado-useful-food-on-the-table_308079-2410.jpg" class="card-img-top" alt="...">
+          <img src="./img/avocado-useful-food-on-the-table_308079-2410.jpg" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Авокадо содержит много калия, клетчатки и ненасыщенных жирных кислот. Поэтому добавление продукта в рацион помогает нормализовать вес, снизить уровень холестерина и обеспечить организм необходимыми витаминами и микроэлементами.</p>
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./img/images.jpg" class="card-img-top" alt="...">
+          <img src="./img/images.jpg" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Орехи — это настоящий кладезь витаминов, микроэлементов и питательных веществ. Они содержат кальций, калий, магний, железо, фосфор и другие минералы. Этот продукт богат клетчаткой, витаминами A, B, C, D и E. ... Употреблять их нужно очищенными и сырыми, чтобы сохранить полезные жирные кислоты и витамин Е.</p>
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./img/images (2).jpg" class="card-img-top" alt="...">
+          <img src="./img/images (3).jpg" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Фрукты богаты витаминами и минералами, которые укрепляют иммунитет, улучшают обмен веществ, а клетчатка и целлюлоза в составе важны для правильной работы кишечника. "Большинство фруктов на 80-95% состоит из воды, они низкокалорийны и в них много клетчатки, — пояснила нутрициолог.</p>
