--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./4/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
    
@@ -22,12 +22,13 @@
         <div class="header-item"><a href="./3/index.html">Lesson 3</a></div>
         <div class="header-item"><a href="./4/index.html">Lesson 4</a></div>
         <div class="header-item"><a href="./5/index.html">Lesson 5</a></div>
+    </div>
 
     <p>Sprint 2.Marcup master</p>
     <hr>
     <div class="center">
         <div class="center-item"><a href="./6/index.html">Box model lesson 6</a></div>
-        <div class="center-item"><a href="./7/index (1).html"> Lesson 7</a></div>
+        <div class="center-item"><a href="./7/index.html"> Lesson 7</a></div>
         <div class="center-item"> <a href="./8/index.html"> Lesson 8</a></div>
         <div class="center-item"> <a href="./9/index.html">Lesson 9</a></div>
         <div class="center-item"> <a href="./10/index.html">Lesson 10</a></div>
