--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <div class="center-item"><a href="./18/index.html">Lesson 18</a></div>
         <div class="center-item"><a href="./19/index.html">Lesson 19</a></div>
         <div class="center-item"><a href="./20/index.html">Lesson 20</a></div>
+        <div class="center-item"><a href="./21/index.html">Lesson 21</a></div>
+
 
 
     </div>
